Bugfix/enhance code quality (#75)
* Compare savings-plan projections with and without rebalancing

* update gitignore

* Harden Sonar gate enforcement and isolate scanner workspace

* Harden backend quality refactors and Sonar token workflow

Consolidate Sonar authentication on bearer tokens and extract high-complexity backend logic into smaller helpers to reduce static-analysis risk while preserving behavior.

* chore(sonar): baseline before full remediation

* Fixed Sonar issues

* recreated sonar-start.sh